@@ -11,6 +11,8 @@
 package org.eclipse.linuxtools.valgrind.cachegrind.tests;
 
 import org.eclipse.linuxtools.valgrind.cachegrind.CachegrindPlugin;
+import org.eclipse.linuxtools.valgrind.cachegrind.model.CachegrindFile;
+import org.eclipse.linuxtools.valgrind.cachegrind.model.CachegrindOutput;
 import org.eclipse.linuxtools.valgrind.launch.IValgrindToolPage;
 import org.eclipse.linuxtools.valgrind.tests.AbstractValgrindTest;
 import org.osgi.framework.Bundle;
@@ -30,6 +32,16 @@ public abstract class AbstractCachegrindTest extends AbstractValgrindTest {
 	@Override
 	protected IValgrindToolPage getToolPage() {
 		return new CachegrindTestToolPage();
+	}
+
+	protected CachegrindFile getFileByName(CachegrindOutput output, String name) {
+		CachegrindFile file = null;
+		for (CachegrindFile f : output.getFiles()) {
+			if (f.getName().equals(name)) {
+				file = f;
+			}
+		}
+		return file;
 	}
 
 }
